personalOrg/force-app/main/default/objects/rushi1__c/rushi1__c.object-meta.xml
<CustomObject>
    <description>test</description>
    <label>rushi1</label>
    <nameField>
        <label>rushi1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rushis1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>