personalOrg/force-app/main/default/objects/rushi1__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>