personalOrg/force-app/main/default/objects/rushi1__c/fields/Formula_C__c.field-meta.xml
<CustomField>
    <fullName>Formula_C__c</fullName>
    <formula>Count__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>