personalOrg/force-app/main/default/objects/rushi1__c/fields/Rushi1Email__c.field-meta.xml
<CustomField>
    <fullName>Rushi1Email__c</fullName>
    <label>Rushi1Email</label>
    <type>Email</type>
</CustomField>